# detectron2

./: .gitignore  README  pyproject.toml  simple.py  test_webcam.py
